Report: Legal, Social, Ethical and Professional Issues (#31)

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -4,13 +4,12 @@
   url    = {https://spinningup.openai.com/en/latest/spinningup/rl_intro2.html},
   year   = {2018}
 }
-@article{AIAct2024,
-  author  = {European Parliament and Council of the European Union},
-  journal = {Publications Office of the European Union},
-  month   = {6},
-  title   = {Regulation (EU) 2024/1689},
-  url     = {https://eur-lex.europa.eu/legal-content/EN/LSU/?uri=CELEX:32024R1689},
-  year    = {2024}
+@misc{AIAct2024,
+  author = {European Parliament and Council of the European Union},
+  title  = {Regulation (EU) 2024/1689 of the European Parliament and of the Council of 13 June 2024 laying down harmonised rules on artificial intelligence and amending certain Union legislative acts (Artificial Intelligence Act)},
+  year   = {2024},
+  note   = {Official Journal of the European Union, L 2024/1689, 12.7.2024},
+  url    = {https://eur-lex.europa.eu/eli/reg/2024/1689/oj}
 }
 @article{Amirshahi2023,
   abstract  = {In recent years, cryptocurrencies' price prediction has attracted the interest of many people including investors, researchers and practitioners. In this study, we proposed a hybrid model for predicting the daily close price of cryptocurrencies based on different neural networks such as long short-term memory, convolutional neural network and attention mechanism. Using an ensemble of three pre-trained language models, we extracted sentiment of cryptocurrency-related tweets posted between 1 January 2021 and 31 December 2021. We constructed 20 different versions of our model and evaluated their performance on data of 27 most traded cryptocurrencies using a history of previous days' sentiment data along with close prices as input data. The flexible input layer of our model enables different ways of feeding data into the model to adjust it for different cryptocurrencies to obtain better predictions. Our analysis revealed several important findings. We showed that longer sequences of input data achieve most accurate predictions on average. More specifically, using a history of 14- and 21-days' data results in lowest RMSE values on average compared to using a history of 7 days. However, there is no significant difference between the results related to the input sequences with lengths of 14 and 21. In addition, our findings suggest that sentiment data can be useful in predicting prices for more than 70% of the studied cryptocurrencies. Thus, peoples' emotions, opinions, and sentiment that are expressed through their posts on Twitter platform play a significant role in prediction of cryptocurrencies' prices.},
@@ -42,6 +41,12 @@
   volume    = {58},
   url       = {https://arxiv.org/abs/1910.10045v2},
   year      = {2019}
+}
+@misc{BCSCodeConduct,
+  author = {British Computer Society},
+  title  = {BCS Code of Conduct},
+  url    = {https://www.bcs.org/membership-and-registrations/become-a-member/bcs-code-of-conduct/},
+  year   = {2022}
 }
 @article{Bellemare2017,
   abstract  = {In this paper we argue for the fundamental importance of the value distribution: the distribution of the random return received by a reinforcement learning agent. This is in contrast to the common approach to reinforcement learning which models the expectation of this return, or value. Although there is an established body of literature studying the value distribution, thus far it has always been used for a specific purpose such as implementing risk-aware behaviour. We begin with theoretical results in both the policy evaluation and control settings, exposing a significant distributional instability in the latter. We then use the distributional perspective to design a new algorithm which applies Bellman's equation to the learning of approximate value distributions. We evaluate our algorithm using the suite of games from the Arcade Learning Environment. We obtain both state-of-the-art results and anecdotal evidence demonstrating the importance of the value distribution in approximate reinforcement learning. Finally, we combine theoretical and empirical evidence to highlight the ways in which the value distribution impacts learning in the approximate setting.},
@@ -173,6 +178,16 @@
   volume    = {20},
   url       = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0315528},
   year      = {2025}
+}
+@article{DeFreitas2025,
+  title     = {Why People Resist Embracing AI: The five main obstacles-and how to overcome them},
+  author    = {De Freitas, Julian},
+  journal   = {Harvard Business Review},
+  volume    = {104},
+  number    = {1-2},
+  pages     = {52--56},
+  year      = {2025},
+  publisher = {Harvard Business School Publishing Corporation}
 }
 @article{Falkner2018,
   abstract  = {Modern deep learning methods are very sensitive to many hyperparameters, and, due to the long training times of state-of-the-art models, vanilla Bayesian hyperparameter optimization is typically computationally infeasible. On the other hand, bandit-based configuration evaluation approaches based on random search lack guidance and do not converge to the best configurations as quickly. Here, we propose to combine the benefits of both Bayesian optimization and bandit-based methods, in order to achieve the best of both worlds: strong anytime performance and fast convergence to optimal configurations. We propose a new practical state-of-the-art hyperparameter optimization method, which consistently outperforms both Bayesian optimization and Hyperband on a wide range of problem types, including high-dimensional toy functions, support vector machines, feed-forward neural networks, Bayesian neural networks, deep reinforcement learning, and convolutional neural networks. Our method is robust and versatile, while at the same time being conceptually simple and easy to implement.},
@@ -324,6 +339,12 @@
   url    = {https://www.ibm.com/think/topics/machine-learning},
   year   = {2021}
 }
+@misc{IETRules,
+  author = {Institution of Engineering and Technology},
+  title  = {Rules of Conduct},
+  url    = {https://www.theiet.org/about/governance/rules-of-conduct},
+  year   = {2024}
+}
 @article{Jiang2016,
   abstract  = {Portfolio management is the decision-making process of allocating an amount of fund into different financial investment products. Cryptocurrencies are electronic and decentralized alternatives to government-issued money, with Bitcoin as the best-known example of a cryptocurrency. This paper presents a model-less convolutional neural network with historic prices of a set of financial assets as its input, outputting portfolio weights of the set. The network is trained with 0.7 years' price data from a cryptocurrency exchange. The training is done in a reinforcement manner, maximizing the accumulative return, which is regarded as the reward function of the network. Backtest trading experiments with trading period of 30 minutes is conducted in the same market, achieving 10-fold returns in 1.8 months' periods. Some recently published portfolio selection strategies are also used to perform the same back-tests, whose results are compared with the neural network. The network is not limited to cryptocurrency, but can be applied to any other financial markets.},
   author    = {Zhengyao Jiang and Jinjun Liang},
@@ -339,7 +360,6 @@
   url       = {https://arxiv.org/abs/1612.01277v5},
   year      = {2016}
 }
-
 @misc{kent,
   author = {Financial Mathematics Clinic},
   editor = {University of Kent},
@@ -480,6 +500,13 @@
   author    = {Robert Andrew Martin},
   title     = {PyPortfolioOpt: portfolio optimization in Python},
   journal   = {Journal of Open Source Software}
+}
+@misc{MiFIDII,
+  title  = {Directive 2014/65/EU of the European Parliament and of the Council of 15 May 2014 on markets in financial instruments and amending Directive 2002/92/EC and Directive 2011/61/EU (recast)},
+  year   = {2014},
+  note   = {Official Journal of the European Union, L 173, 12.6.2014, p. 349-496},
+  url    = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A02014L0065-20250117},
+  author = {{European Parliament and Council of the European Union}}
 }
 @article{Millea2021,
   abstract  = {Deep reinforcement learning (DRL) has achieved significant results in many machine learning (ML) benchmarks. In this short survey, we provide an overview of DRL applied to trading on financial markets with the purpose of unravelling common structures used in the trading community using DRL, as well as discovering common issues and limitations of such approaches. We include also a short corpus summarization using Google Scholar. Moreover, we discuss how one can use hierarchy for dividing the problem space, as well as using model-based RL to learn a world model of the trading environment which can be used for prediction. In addition, multiple risk measures are defined and discussed, which not only provide a way of quantifying the performance of various algorithms, but they can also act as (dense) reward-shaping mechanisms for the agent. We discuss in detail the various state representations used for financial markets, which we consider critical for the success and efficiency of such DRL agents. The market in focus for this survey is the cryptocurrency market; the results of this survey are two-fold: firstly, to find the most promising directions for further research and secondly, to show how a lack of consistency in the community can significantly impede research and the development of DRL agents for trading.},
