--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -6,7 +6,7 @@
 \programme{Computational Finance M.Sc.}
 \supervisor{Riaz Ahmad}
 \wordcount{\input{wordcount.tex}}
-\title{Explainable Deep Learning for Portfolio Optimisation}
+\title{Explainable Deep Reinforcement Learning for Portfolio Optimisation of Financial Assets}
 \author{Ingrid Pérez Aguilera}
 \ReleaseProject{1} 
 \department{Informatics} 
