--- a/report/kclthesis.cls
+++ b/report/kclthesis.cls
@@ -14,17 +14,27 @@
 
 \LoadClass[11pt, a4paper]{report}
 
-% Mathfonts
 \RequirePackage{amsmath, amsfonts, amsthm, amssymb}
 \RequirePackage{wasysym}
-
-%Additional Packages
 \RequirePackage{color}
 \RequirePackage[nottoc,notlot,notlof]{tocbibind}
 \RequirePackage{hyperref}
 \RequirePackage{fancyhdr}
 \RequirePackage{subfigure}
 \RequirePackage[textsize=tiny,figwidth=8cm]{todonotes}
+\RequirePackage{float}
+\RequirePackage[utf8]{inputenc}
+\RequirePackage{graphbox}
+\RequirePackage{pgfgantt}
+\RequirePackage{nomencl}
+\RequirePackage[acronym,nonumberlist]{glossaries}
+\RequirePackage{amsmath}
+\RequirePackage{algorithm}
+\RequirePackage{algpseudocode}
+\RequirePackage{bm}
+\RequirePackage{multirow}
+\RequirePackage{booktabs}
+\RequirePackage{longtable}
 
 % Cover Page
 \RequirePackage{graphicx}
