Add paragraph regarding environment implementation

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -120,6 +120,15 @@
   url       = {https://arxiv.org/abs/2104.09476v1},
   year      = {2021}
 }
+@article{Brockman2016,
+  abstract = {OpenAI Gym is a toolkit for reinforcement learning research. It includes a growing collection of benchmark problems that expose a common interface, and a website where people can share their results and compare the performance of algorithms. This whitepaper discusses the components of OpenAI Gym and the design decisions that went into the software.},
+  author   = {Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba Openai},
+  month    = {6},
+  title    = {OpenAI Gym},
+  url      = {https://arxiv.org/abs/1606.01540v1},
+  year     = {2016},
+  journal  = {arXiv preprint arXiv:1606.01540}
+}
 @inbook{Bruce2014,
   abstract  = {Once a security is selected, its weight or position must be determined in order to construct the portfolio. Portfolio construction is the process of using security characteristics to combine the securities in a way that optimizes the portfolio’s outcomes. Security selection is usually considered the primary driver of portfolio returns, and portfolio construction is usually considered to primarily impact the portfolio’s risk. This chapter discusses the how characteristics of portfolio securities combine to determine the portfolio’s absolute risk and risk relative to a benchmark. The chapter also offers practical considerations to student-managed investment funds in optimizing a portfolio for various objectives.},
   author    = {Brian Bruce and Jason Greene},
