--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -142,6 +142,10 @@
     name=Mean-Variance Optimisation,
     description={Investment strategy that aims to construct a portfolio of assets that maximises expected return for a given level of risk, or minimises risk for a given level of expected return}
 }
+\newglossaryentry{python}{
+    name=Python,
+    description={Interpreted, object-oriented, high-level programming language}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
@@ -183,7 +187,7 @@
 \newacronym{sp500}{S\&P 500}{Standard and Poor's 500 Index}
 \newacronym{dw30}{DW30}{Dow Jones 30 Index}
 \newacronym{eurostoxx50}{Euro Stoxx 50}{Euro Stoxx 50 Index}
-\newacronym{us}{US}{United States}
+\newacronym{us}{U.S.}{United States}
 \newacronym{dxy}{DXY}{\acrshort{us} Dollar Index}
 \newacronym{exy}{EXY}{Euro Index}
 \newacronym{bxy}{BXY}{British Pound Currency Index}
