Introduction: Paragraph rewrite

--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -2,9 +2,9 @@
 
 \Gls{financialmarkets} are highly complex systems influenced by numerous factors, including financial and political events, social trends and technological advancements. Moreover, their evolving and stochastic nature requires using the most advance computational developments to model the financial environment. The tasks of financial time series prediction and \Gls{portfoliooptimisation} are considerably intricate, due to the semi-strong form of market efficiency and the high level of noise. \cite{Shen2020}
 
-\Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute trading actions based on an algorithm without human intervention. In its early days, the field mainly studied the usage of a computer program to follow a predefined strategy \cite{Lei2020}. Nonetheless, in recent years, algorithmic trading has evolved to a problem in which environment perception entails learning feature representation from highly non-stationary and noisy financial time series data and decision-making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without supervision \cite{Ma2021}.
+\Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute trading actions based on an algorithm without human intervention. Initially, the field mainly studied the usage of a computer program to follow a predefined strategy \cite{Lei2020}. More recently, algorithmic trading involves environment perception by learning feature representation from highly non-stationary and noisy financial time series data, and decision-making by exploring the environment and simultaneously taking actions without supervision \cite{Ma2021}.
 
-\acrfull{ml} is at an advantage for the task given its capability to learn from historical data and make predictions about the future state of an environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Hasan2024,Nti2020,Shen2020,Wu2023}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} would allow the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
+\acrfull{ml} has an advantage for the task due to its capability to learn from historical data and make predictions about the future state of an environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Hasan2024,Nti2020,Shen2020,Wu2023}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} allows the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
 
 Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread adoption in the financial industry remains limited. This is primarily due to following challenges \cite{Cortes2024}:
 \begin{enumerate}
@@ -13,9 +13,9 @@ Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread
     \item lack of transparency of \acrshort{ml} models, often referred to as black boxes, making it increasingly complex to interpret the algorithm's decisions. 
 \end{enumerate}
 
-In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. This highlights its importance and the need to explore its advantages in more complex models, without inadvertently increasing the complexity of the overall methodology. 
+In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. The legal requirements highlight the importance of understanding a model's decisions and the need to explore the advantages of explainability in deep models, without inadvertently increasing the complexity of the overall methodology.
 
-Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing post-hoc explainability techniques. 
+Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing explainability techniques.
 
 \section{Objectives} \label{sec:introduction-objectives}
 
