Add check for empty index

--- a/examples/backtesting.ipynb
+++ b/examples/backtesting.ipynb
@@ -197,21 +197,27 @@
    "source": [
     "for strategy in [\"mean\", \"min\", \"momentum\", \"equal\"]:\n",
     "    print(f\"Optimising portfolio with strategy: {strategy}\")\n",
+    "    try:\n",
+    "        df_account_strat = benchmark.optimise_portfolio(\n",
+    "            strategy=strategy,  # type: ignore\n",
+    "        )\n",
     "\n",
-    "    df_account_strat = benchmark.optimise_portfolio(\n",
-    "        strategy=strategy,  # type: ignore\n",
-    "    )\n",
+    "        # Add cumulative returns to the account dataframe\n",
+    "        df_account_strat[\"cumulative_return\"] = (\n",
+    "            1 + df_account_strat[\"daily_return\"]\n",
+    "        ).cumprod() - 1\n",
     "\n",
-    "    # Add cumulative returns to the account dataframe\n",
-    "    df_account_strat[\"cumulative_return\"] = (\n",
-    "        1 + df_account_strat[\"daily_return\"]\n",
-    "    ).cumprod() - 1\n",
+    "        df_account_strat[\"model\"] = strategy.capitalize()\n",
+    "        df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
     "\n",
-    "    df_account_strat[\"model\"] = strategy.capitalize()\n",
-    "    df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
-    "\n",
-    "    perf_stats_alg = benchmark.compute_perf_stats(df_account=df_account_strat)\n",
-    "    perf_stats[strategy.capitalize()] = perf_stats_alg"
+    "        perf_stats_alg = benchmark.compute_perf_stats(\n",
+    "            df_account=df_account_strat\n",
+    "        )\n",
+    "        perf_stats[strategy.capitalize()] = perf_stats_alg\n",
+    "    except Exception as e:\n",
+    "        print(\n",
+    "            f\"Error occurred while optimising portfolio with strategy {strategy}: {e}\"\n",
+    "        )"
    ]
   },
   {
@@ -221,14 +227,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_account_strat = benchmark.get_index_performance(\n",
-    "    config.TEST_START_DATE, config.TEST_END_DATE, config.INDEX\n",
-    ")\n",
+    "if config.INDEX is not None:\n",
+    "    df_account_strat = benchmark.get_index_performance(\n",
+    "        config.TEST_START_DATE, config.TEST_END_DATE, config.INDEX\n",
+    "    )\n",
     "\n",
-    "df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
+    "    df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
     "\n",
-    "perf_stats_alg = benchmark.compute_perf_stats(df_account=df_account_strat)\n",
-    "perf_stats[\"Index\"] = perf_stats_alg"
+    "    perf_stats_alg = benchmark.compute_perf_stats(df_account=df_account_strat)\n",
+    "    perf_stats[\"Index\"] = perf_stats_alg"
    ]
   },
   {
