--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -146,6 +146,22 @@
     name=Python,
     description={Interpreted, object-oriented, high-level programming language}
 }
+\newglossaryentry{blackbox}{
+    name=Black Box,
+    text={black box},
+    plural=black boxes,
+    description={Term used to describe a system or model whose internal workings are not transparent or easily understood}
+}
+\newglossaryentry{exploration}{
+    name=Exploration,
+    text={exploration},
+    description={Process of investigating and experimenting with different actions or strategies to discover their effects and improve decision-making}
+}
+\newglossaryentry{exploitation}{
+    name=Exploitation,
+    text={exploitation},
+    description={Process of leveraging known information to make decisions or take actions that are expected to yield the highest reward}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
@@ -161,7 +177,7 @@
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
-\newacronym{dnn}{DNN}{\Glspl{deepneuralnetwork}}
+\newacronym{dnn}{DNN}{\gls{deepneuralnetwork}}
 \newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
 \newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
 \newacronym{dqn}{DQN}{Deep Q-Network}
@@ -222,3 +238,4 @@
 \newacronym{ip}{IP}{Intellectual Property}
 \newacronym{bcs}{BCS}{British Computer Society}
 \newacronym{iet}{IET}{The Institution of Engineering and Technology}
+\newacronym{mse}{MSE}{Mean Squared Error}
