--- a/report/tables/drl_algorithms_comparison.tex
+++ b/report/tables/drl_algorithms_comparison.tex
@@ -3,7 +3,7 @@
     \textbf{Algorithm} & \textbf{Policy Type} & \textbf{On/Off Policy} & \textbf{Key Idea} \\
     \hline
     \endhead
-    \acrshort{a2c} & Stochastic & On-Policy & Advantage Actor-Critic \\ \hline
+    \acrshort{a2c} & Stochastic & On-Policy & Advantage Function Estimation \\ \hline
     \acrshort{ppo} & Stochastic & On-Policy & Clipped Policy Updates \\ \hline
     \acrshort{ddpg} & Deterministic & Off-Policy & Actor-Critic + Replay buffer \\ \hline
     \acrshort{td3} & Deterministic & Off-Policy & Double critics + Delayed updates \\ \hline
