--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -37,6 +37,7 @@
 \setcounter{secnumdepth}{5}
 \setlength{\marginparwidth}{2cm} % Adjust marginparwidth to avoid todonotes issues
 \renewcommand{\contentsname}{Table of Contents}
+\setlength{\nomlabelwidth}{2cm} % Adjust space for nomenclature labels
 
 \makeglossaries
 \makenomenclature
